# rdns

./: .gitignore  AGENTS.md  Cargo.toml  README.md  REUSE.toml  deny.toml
.agents/skills/architecture-planner/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
LICENSES/: Apache-2.0.txt
docs/: steps.md
docs/plan/: 00-overview.md  01-dns-protocol.md  02-resolver-cache.md  03-policy-blocking.md  04-blocklist-ingestion.md  05-persistence-config.md  06-admin-api-ui.md  07-operations-testing.md  08-implementation-roadmap.md  09-reviewer-concerns.md
docs/remediation/: phase4-remediation-plan.md
docs/review/: perf-01.md  perf-02.md
docs/steps/: perf-01.md
remediation/: phase4-remediation-plan.md
scripts/: check-license-headers.sh
src/: AGENTS.md  dns.rs  lib.rs  main.rs
src/config/: AGENTS.md  mod.rs
src/delivery/: AGENTS.md  dns.rs  mod.rs  upstream.rs
src/protocol/: AGENTS.md  mod.rs
src/resolver/: AGENTS.md  mod.rs  policy.rs
tests/: forwarding.rs  live_dns.rs
