[package]
name = "rdns"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opentelemetry = { version = "0.32.0", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = ["metrics", "rt-tokio"] }
tokio = { version = "1.28.2", features = ["full"] }
